# routes/user/ProjectsRoutes.js
@@ -7,14 +7,14 @@ import Project from "../../models/Project.js";
 import errorHandler from "../../helpers/errorHandler.js";
 
 const ProjectsRoutes = Router();
-const queryJoiData = {
+const paramsJoiData = {
     id: Joi
         .string()
         .empty()
         .required()
         .custom((value, helper) => {
             const isValidId = mongoose.Types.ObjectId.isValid(value);
-            if (!isValidId) return helper.message("\"query.id\" is invalid");
+            if (!isValidId) return helper.message("\"params.id\" is invalid");
             return true;
         })
 }
@@ -57,6 +57,7 @@ ProjectsRoutes.get(
         // #swagger.summary = "get project"
         // #swagger.tags = ["User"]
         /* #swagger.parameters["id"] = {
+                in: "path",
                 description: "Project id",
                 required: true
             } */
@@ -66,20 +67,60 @@ ProjectsRoutes.get(
                 $ref: "#/definitions/Response"
             }]
         } */
-        try {
-            const errorHandlerResult = await errorHandler(
-                Joi.object(queryJoiData).label("Request data"),
-                req.query, 400
-            );
-            if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
+        const errorHandlerResult = await errorHandler(
+            Joi.object(paramsJoiData).label("Request params"),
+            req.params, 400
+        );
+        if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
 
-            const { id } = req.query;
-            const { description, img, title } = await Project.findById(id);
+        try {
+            const { id } = req.params;
+            const { title, description, implementedFeatures, link } = await Project.findById(id);
             return res.json(
                 await msgHandler({
                     statusCod: 200,
                     message: "Project have been found.",
-                    data: { description, img, title }
+                    data: { title, description, implementedFeatures, link }
+                })
+            );
+        } catch (e) {
+            console.log(e);
+            res.status(500).json(await msgHandler({ statusCod: 500, message: "Server error." }));
+        }
+    }
+)
+
+ProjectsRoutes.patch(
+    "/project/:id/like",
+    async (req, res) => {
+        // #swagger.path = "/project/:id/like"
+        // #swagger.description = "Like project"
+        // #swagger.summary = "like project"
+        // #swagger.tags = ["User"]
+        /* #swagger.parameters["id"] = {
+                in: "path",
+                description: "Project id",
+                required: true
+            } */
+        /* #swagger.responses[200] = {
+            description: "Result info",
+            schema: [{
+                $ref: "#/definitions/Response"
+            }]
+        } */
+        const errorHandlerResult = await errorHandler(
+            Joi.object(paramsJoiData).label("Request params"),
+            req.params, 400
+        );
+        if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
+
+        try {
+            const { id } = req.params;
+            await Project.findByIdAndUpdate(id, { $inc: { likes: 1 } });
+            return res.json(
+                await msgHandler({
+                    statusCod: 200,
+                    message: "You like a project!"
                 })
             );
         } catch (e) {
