# swagger/output.json
@@ -205,9 +205,9 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
             "description": "Edited project id",
             "required": true,
-            "in": "query",
             "type": "string"
           },
           {
@@ -244,9 +244,9 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
             "description": "Deleted project id",
             "required": true,
-            "in": "query",
             "type": "string"
           }
         ],
@@ -328,9 +328,9 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
             "description": "Deleted project id",
             "required": true,
-            "in": "query",
             "type": "string"
           },
           {
@@ -369,9 +369,9 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
             "description": "Deleted feedback id",
             "required": true,
-            "in": "query",
             "type": "string"
           }
         ],
@@ -428,9 +428,47 @@
         "parameters": [
           {
             "name": "id",
+            "in": "path",
             "description": "Project id",
             "required": true,
-            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result info",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Response"
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/project/:id/like": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "summary": "like project",
+        "description": "Like project",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Project id",
+            "required": true,
             "type": "string"
           }
         ],
@@ -509,9 +547,15 @@
           "type": "string",
           "example": "Project desc"
         },
-        "img": {
-          "type": "string",
-          "example": "img link"
+        "implementedFeatures": {
+          "type": "array",
+          "example": [
+            "Feature 1",
+            "Feature 2"
+          ],
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
